--- a/styles/comprar.css
+++ b/styles/comprar.css
@@ -1,5 +1,5 @@
 .principal{
-    height: 100vh;
+    height: 98vh;
     border: 1px solid black;
     margin-top: 10px;
     max-width: 700px;
@@ -14,6 +14,10 @@
     font-size: 2rem;
     color: white;
 
+}
+
+.header p {
+    color: white;
 }
 
 
